# duck_goose

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: draft-release.yml  publish-docs.yml  publish-pypi.yml  run-tests.yml
src/duck_goose/: local.py  local_tools.py  main.py  mcp_client.py  mcp_serve.py
src/notebooks/: run_demos.ipynb
tests/: test_main.py
